Back button alignment corrected

--- a/src/components/Password/Password.style.scss
+++ b/src/components/Password/Password.style.scss
@@ -27,5 +27,10 @@
    
 .btn-login {
     width: 100%;
-    padding: #{$spacing}px
+    padding: #{$spacing}px;
+}
+
+.back-button {
+    z-index: 1000;
+    position: absolute;
 }
